--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,7 +13,10 @@
       <span class="icon"></span>
       <span class="text" *ngIf="!isCollapsed">Home</span>
     </a>
-
+    <a routerLink="/articles">
+      <span class="icon"></span>
+      <span class="text" *ngIf="!isCollapsed">Articles</span>
+    </a>
     <a routerLink="/about">
       <span class="icon"></span>
       <span class="text" *ngIf="!isCollapsed">About me</span>
