--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -10,15 +10,15 @@
   </button>
   <nav>
     <a routerLink="/home">
-      <span class="icon"></span>
+      <span class="icon">🏠</span>
       <span class="text" *ngIf="!isCollapsed">Home</span>
     </a>
     <a routerLink="/articles">
-      <span class="icon"></span>
+      <span class="icon">🗞</span>
       <span class="text" *ngIf="!isCollapsed">Articles</span>
     </a>
     <a routerLink="/about">
-      <span class="icon"></span>
+      <span class="icon">🙋🏻‍♂️</span>
       <span class="text" *ngIf="!isCollapsed">About me</span>
     </a>
   </nav>
