Added projects page

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,6 +13,11 @@
       <span class="icon">🏠</span>
       <span class="text" *ngIf="!isCollapsed">Home</span>
     </a>
+    <a routerLink="/projects">
+      <span class="icon">💻</span>
+      <span class="text" *ngIf="!isCollapsed">Projects</span>
+    </a>
+
     <a routerLink="/articles">
       <span class="icon">🗞</span>
       <span class="text" *ngIf="!isCollapsed">Articles</span>
